syntax = "proto3";

package hts.user;

message LoginRequest {
  string user_id = 1;
  string password = 2;
}

message LoginResponse {
  string jwt_token = 1;
  string refresh_token = 2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}